k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: remote-monitor-service
  namespace: default
spec:
  selector:
    app: remote-monitor
  ports:
  - port: 80
    targetPort: 3000
  type: ClusterIP
